--- a/index.html
+++ b/index.html
@@ -26,10 +26,30 @@
                         <a class="nav-link" href="/betterself/meal-planner/index.html">Meal Planner</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Workout Planner</a>
+                        <a class="nav-link" href="/betterself/workout-planner/index.html">Workout Planner</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Mindfulness Planner</a>
+                        <a class="nav-link" href="/betterself/mindfulness-planner/index.html">Mindfulness Planner</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            More Tools
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/betterself/hydration-reminder/index.html">Hydration Reminder</a>
+                            <a class="dropdown-item" href="/betterself/fasting-tracker/index.html">Fasting Tracker</a>
+                            <a class="dropdown-item" href="/betterself/body-scan-meditation/index.html">Body Scan Meditation</a>
+                            <a class="dropdown-item" href="/betterself/compassion-journal/index.html">Compassion Journal</a>
+                            <a class="dropdown-item" href="/betterself/gratitude-journal/index.html">Gratitude Journal</a>
+                            <a class="dropdown-item" href="/betterself/meditation-timer/index.html">Meditation Timer</a>
+                            <a class="dropdown-item" href="/betterself/mindful-eating-journal/index.html">Mindful Eating Journal</a>
+                            <a class="dropdown-item" href="/betterself/mood-tracker/index.html">Mood Tracker</a>
+                            <a class="dropdown-item" href="/betterself/muscle-relaxation-guide/index.html">Muscle Relaxation Guide</a>
+                            <a class="dropdown-item" href="/betterself/posture-corrector/index.html">Posture Corrector</a>
+                            <a class="dropdown-item" href="/betterself/strength-training/index.html">Strength Training</a>
+                            <a class="dropdown-item" href="/betterself/workout-recovery/index.html">Workout Recovery</a>
+                            <a class="dropdown-item" href="/betterself/yoga-routine/index.html">Yoga Routine</a>
+                        </div>
                     </li>
                 </ul>
             </div>
